# merase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
examples/: CMakeLists.txt  README.md  main.c
include/: merase.h
src/: merase.c
tests/: CMakeLists.txt  test_merase.cpp
